fixex bootstrap styles

--- a/client/index.html
+++ b/client/index.html
@@ -12,11 +12,8 @@
 	<link href="https://fonts.googleapis.com/css?family=Raleway:900" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat:900|Work+Sans:900" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300" rel="stylesheet">
-
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" rel="stylesheet">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-
-	<script type="text/javascript" src="//platform-api.sharethis.com/js/sharethis.js#property=58a6ef8213d0b400116d05c6&product=sticky-share-buttons"></script>
-    <script type="text/javascript" src="//platform-api.sharethis.com/js/sharethis.js#property=58a6ef8213d0b400116d05c6&product=inline-share-buttons"></script>
 </head>
 <body lang="lt-LT">
   <app>
@@ -34,6 +31,5 @@
           </div>
       </div>
   </app>
-  <script src="scroll/stickyfill.js"></script>
   <script src="scroll/script.js"></script>
 </body>
